# gamma-interview-task

./: README.md  pyproject.toml  run.py  test_generic.py
