[tool.poetry]
name = "interview-task"
version = "0.1.0"
description = ""
authors = ["Evgeny Chernyshov <evgeny.chernyshov@hkeeper.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gdown = "^4.7.1"
pandas = "^2.0.3"
flake8 = "^6.0.0"
pytest-console-scripts = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
